# water-player-without-mpi

./: CMakeLists.txt  README.md  build.sh  hello.cc  main.cc
.cache/clangd/index/: controller.h.247BA2D504E48EA3.idx  hello_controller.cc.D0C4101A5FD09B16.idx  hello_controller.h.572AE12FF4F5785B.idx  hello_model.cc.5481E76D3373EFF2.idx  hello_model.h.4A9AB5901EBBCD80.idx  hello_view.cc.BEBE02988B903A2B.idx  hello_view.h.A2A670194B76C772.idx  log.h.8559AAC0EF152FEE.idx  main.cc.5B6BEB91CB679CEE.idx  model.h.97A0794E9A6B4116.idx  view.h.2DA57812A8635DA9.idx
controller/include/: hello_controller.h
controller/include/controller/: hello_controller.h
controller/src/: hello_controller.cc
log/include/log/: log.h
model/include/: model_define.h
model/include/factory/: model_factory.h
model/include/model/: hello_model.h
model/src/: hello_model.cc
mvc/include/: controller.h  view.h
mvc/include/mvc/: controller.h  model.h  view.h
mvc/include/props/: bind.h
view/include/: hello_view.h
view/include/view/: hello_view.h
view/src/: hello_view.cc
